# bread_manager

./: .gitignore  Cargo.toml  LICENSE  README.md  diesel.toml
.github/workflows/: fmt-check-test.yml  fmt-check-test.ymlX
design/: bread_manager_2025-04-09T05_24_38.038Z.json  bread_manager_2025-04-09T18_28_53.633Z.json  bread_manager_2025-04-09T20_21_14.535Z.json  bread_manager_2025-04-09T20_41_16.558Z.json  bread_manager_2025-04-12T06_43_27.031Z.json  bread_manager_drawdb_design.json
migrations/: 20250127200126_init.down.sql  20250127200126_init.up.sql  20250305203310_add_soft_deletes.down.sql  20250305203310_add_soft_deletes.up.sql  20250310201156_convert_records_deleted_to_state.down.sql  20250310201156_convert_records_deleted_to_state.up.sql  20250322111101_add_link_type_to_links.down.sql  20250322111101_add_link_type_to_links.up.sql
migrations/2024-10-31-083512_create_profiles/: down.sql  up.sql
migrations/2024-10-31-091049_create_records/: down.sql  up.sql
migrations/2024-10-31-094720_create_possible_links/: down.sql  up.sql
migrations/2024-10-31-095737_create_links/: down.sql  up.sql
src/: apps.rs  db.rs  infra.rs  main.rs  model.rs  schema.rs  utils.rs
src/Xutils/: communicator.rs  mod.rs
src/apps/: fileupload.rs  linking.rs  profiles.rs  recordview.rs  tableview.rs  utils.rs  visualizations.rs
src/apps/fileupload/: files_to_parse.rs  parsed_records.rs
src/apps/fileupload/files_to_parse/: margin_cutoff.rs
src/apps/fileupload/parsed_records/: find_overlaps.rs  import_parsing_state.rs  results_with_overlaps.rs
src/apps/linking/: links.rs  possible_links.rs
src/apps/profiles/: create_profile.rs  parser.rs
src/apps/profiles/create_profile/: basics.rs  main_columns.rs  other_columns.rs
src/apps/tableview/: actions.rs  filterstate.rs  tablecolumns.rs
src/apps/tableview/filterstate/: amount.rs  date.rs  description.rs  origin.rs  tags.rs  uuid.rs
src/apps/visualizations/: bar_chart.rs
src/components/: button_future.rs  expense_record.rs  mod.rs  option_display.rs  pagination.rs  soft_button.rs  table.rs
src/components/expense_records/: full_view.rs  list_view.rs  mod.rs  table.rs
src/components/origins/: mod.rs  origins_dialog.rs
src/components/tags/: mod.rs  tags_dialog.rs
src/db/: builders.rs  data_import.rs  link.rs  possible_links.rs  profiles.rs  query.rs  records.rs  utils.rs
src/db/builders/: transaction_builder.rs
src/db/entities/: content_description.rs  data_groups.rs  data_import.rs  data_import_row.rs  data_import_row_item.rs  datetime.rs  mod.rs  movement.rs  origins.rs  possible_transaction_link.rs  possible_transaction_link_create_group.rs  prelude.rs  profile.rs  profile_content_descriptions.rs  profile_tags.rs  special_content.rs  tags.rs  text_content.rs  transaction.rs  transaction_datetime.rs  transaction_movement.rs  transaction_special.rs  transaction_tags.rs  transaction_text.rs
src/db/query/: content_description_query.rs  data_import_query.rs  group_query.rs  origins_query.rs  profile_query.rs  tags_query.rs  transaction_datetime_query.rs  transaction_movement_query.rs  transaction_query.rs
src/db/query/data_import_query/: models_to_row_items.rs  row_items_query.rs  row_query.rs
src/db/query/transaction_query/: transaction_datetime_query.rs  transaction_movement_query.rs  transaction_properties.rs  transaction_special_query.rs  transaction_text_query.rs
src/infra/: sql_highlighter.rs  sqlx_layer.rs
src/model/: data_import.rs  group.rs  linker.rs  origins.rs  profiles.rs  records.rs  tags.rs  transactions.rs
src/model/data_import/: row.rs  row_item.rs
src/model/linker/: core_linking.rs  duplicate_links.rs  transfer_links.rs
src/model/profiles/: builder.rs  columns.rs  error.rs
src/model/profiles/columns/: money.rs  other.rs  time.rs
src/model/transactions/: content_description.rs  datetime.rs  group.rs  movement.rs  properties.rs  special_content.rs  text_content.rs
src/utils/: changer.rs  communicator.rs  misc.rs  mod.rs  ui_state.rs
