[package]
name = "bread-manager"
version = "0.1.0"
edition = "2021"
description = "deesc"

authors = ["Thomas Ellmenreich <thomas.ellmenreich@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
chrono = { version = "0.4.38", features = ["serde"] }
eframe = "0.29.1"
egui = { version = "0.29.1", features = ["callstack", "document-features", "log"] }
egui_dock = "0.14.0"
egui_extras = { version = "0.29.1", features = ["chrono"] }
egui_plot = "0.29.0"
env_logger = "0.11.5"
flowync = "5.1.0"
futures = "0.3.31"
lazy_async_promise = { path = "../lazy_async_promise" } # "0.5.0"
pollster = "0.3.0"
rayon = "1.10.0"
rfd = "0.15.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio", "uuid", "chrono"] }
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
uuid = { version = "1.10.0", features = ["v4", "v7", "serde"] }
egui_light_states = { path = "../egui_light_states" }
data_communicator = { path = "../data_communicator" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
dotenv = "0.15.0"
num-traits = "0.2.19"

