[package]
name = "bread-manager"
version = "0.1.0"
edition = "2021"
description = "deesc"

authors = ["Thomas Ellmenreich <thomas.ellmenreich@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.31.1"
egui = { version = "0.31.1", features = ["callstack", "document-features", "log"] }
egui_extras = { version = "0.31.1", features = ["chrono"] }
egui_plot = "0.32.1"

tokio = { version = "1.41.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
syntect = { optional = true, version = "5.2.0" }

dotenv = "0.15.0"
num-traits = "0.2.19"
uuid = { version = "1.11.0", features = ["v4", "v7", "serde", "fast-rng", "macro-diagnostics"] }
#sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio", "uuid", "chrono"] }
serde = { version = "1.0.213", features = ["derive"] }
#bincode = "1.3.3"
chrono = { version = "0.4.38", features = ["serde"] }

lazy_async_promise = { path = "../lazy_async_promise" } # "0.5.0"
egui_light_states = { path = "../egui_light_states" }
# data_communicator = { path = "../data_communicator" }
hermes = { path = "../hermes" }
sqlx_projector = { path = "../sqlx_projector" }
sea-query = { version = "0.32.1", features = ["with-uuid", "with-chrono", "with-json", "uuid", "serde_json", "chrono"] }
sea-orm = { version = "1.1.4", features = ["macros", "runtime-tokio", "sqlx-sqlite", "uuid", "with-uuid"] }
#log = "0.4.25"
#futures = "0.3.31"
itertools = "0.14.0"
serde_json = "1.0.140"
console-subscriber = "0.4.1"
log = "0.4.27"
# diesel = { version = "2.2.4", features = ["chrono", "i-implement-a-third-party-backend-and-opt-into-breaking-changes", "r2d2", "returning_clauses_for_sqlite_3_35", "sqlite", "time", "uuid"] }

[features]
default = ["color-sql"]
color-sql = ["dep:syntect"]
